--- a/JS/index.htm
+++ b/JS/index.htm
@@ -22,7 +22,7 @@
         <h1>AJAX is a developer's dream</h1>
         <p><button onclick="loadData()">Change this content</button></p>
     </div> -->
-
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, qui!</p>
     <script src="index.js"></script>
 
     <!-- Erroe handling -->
