--- a/JS/index.htm
+++ b/JS/index.htm
@@ -26,6 +26,11 @@
     <script src="index.js"></script>
 
     <!-- Erroe handling -->
+    <form action="">
+      <input type="text
+      "><input type="text">
+      <button>submit</button>
+    </form>
 
     <p id="demo"></p>
     <script>
