--- a/JS/index.htm
+++ b/JS/index.htm
@@ -25,6 +25,9 @@
 
     <script src="index.js"></script>
 
+    <h1>My First Heading</h1>
+    <p>My first paragraph.</p>
+
     <!-- Erroe handling -->
 
     <p id="demo"></p>
